--- a/BFL/style.css
+++ b/BFL/style.css
@@ -29,6 +29,9 @@
     justify-content: space-between;
     flex-grow: unset;
    }
+   .navbar-bar li{
+    padding:14px 16px;
+   }
 
    /*Section*/
    section{
@@ -53,13 +56,23 @@
    }
    .carousel-item p , .carousel-item h5{
     color: #f5f6f7;
+   }    
+   .carousel-inner img{
+    max-height: 600px;
    }
 
    /*Seccion Hero*/
-   .hero{
-    background-color: #f5f6f7;
+   .encabeza{
+    padding-top: 15px;
+    font-family: 'Roboto', sans-serif;
+   }
+   .staff{
+    /* background-color: #f5f6f7; */
     min-height: 450px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
    }
    .hero-principal{
     padding: 3rem;
@@ -68,12 +81,27 @@
     width: 200px;
     height: 200px;
     margin: 20px;
+    border: 6px solid black;
+   }
+   .hero-perfil:hover{
+    width: 260px;
+    height: 260px;
+    border: 6px solid #f5f6f7;
+   }
+   .hero-principal:hover{
+    background-color: #404040;
+    color: #f5f6f7;
    }
    .hero-principal h2{
     font-size: 1.5rem;
     -webkit-column-break-before: #615151;
    }
 
+   /*Piecito*/
+   .piecito{
+    font-size: 1.2rem;
+   }
+   
    /*Medias*/
    @media screen and (max-width:300px){
     .navbar-brand {
@@ -82,8 +110,7 @@
    }
    @media screen and (min-width:700px){
     .carousel-inner img{
-        max-height: 650px;
-
+        min-height: 400px;
     }
    }
    @media screen and (max-width:770px) {
@@ -101,4 +128,42 @@
        .carousel-item p{
         font-size: 1rem;
        }
+   }
+   @media screen and (max-width:800px) {
+    .staff{
+        flex-direction: column;
+    }
+    .hero-perfil{
+        width: 180px;
+        height: 180px;
+       }
+    .hero-perfil:hover{
+        width: 180px;
+        height: 180px;
+        border: 6px solid black;
+    }
+    .hero-principal h1{
+        font-size: 2.3rem;
+    }
+    .hero-principal h2{
+        font-size: 1.5rem;
+    }
+   }
+   @media screen and (max-width:500px) {
+    .encabeza h1{
+        font-size: 1.8rem;
+       }
+    .staff{
+        flex-direction: column;
+    }
+    .hero-perfil{
+        width: 140px;
+        height: 140px;
+       }
+    .hero-principal h1{
+        font-size: 2rem;
+    }
+    .hero-principal h2{
+        font-size: 1.2rem;
+    }
    }
