--- a/BFL/style.css
+++ b/BFL/style.css
@@ -14,7 +14,20 @@
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
    }
- 
+    body::-webkit-scrollbar {
+        width: 12px;               /* width of the entire scrollbar */
+    }
+    
+    body::-webkit-scrollbar-track {
+        background: #f5f6f7;        /* color of the tracking area */
+    }
+    
+    body::-webkit-scrollbar-thumb {
+        background-color: #404040;    /* color of the scroll thumb */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+        border: 2px solid #f5f6f7;  /* creates padding around scroll thumb */
+    }
+
    /*NavBar*/
    .logo{
     height: 30px;
@@ -117,7 +130,7 @@
    .piecito{
     font-size: 1.2rem;
    }
-   
+
    /*Medias*/
    @media screen and (max-width:300px){
     .navbar-brand {
